src/components/pages/doc.less
.DocPage {}

.DocPage-controlPanels {
  position: sticky;
  bottom: 0;
  top: %(~"calc(100% - %s)", @control-panel-height);
  left: 0;
  right: 0;
  margin-right: 50px;
  display: flex;
  justify-content: flex-end;
  z-index: @edu-z-index-overlay-layer;
  pointer-events: none;

  &.is-panel-open {
    margin: 0;
  }
}

.DocPage-controlPanelsItem {
  margin-left: @edu-control-spacing-base;

  &.is-open {
    margin-left: 0;
  }
}

.DocPage-commentsSection {
  margin: 60px 0;
}

.DocPage-commentsSectionHeader {
  font-size: @edu-heading-5-size;
  font-weight: bold;
  margin-bottom: 20px;
}

.DocPage-badges {
  .m-control-group;
  justify-content: end;
}

.DocPage-verifiedBadge {
  padding: 8px;
  font-size: 16px;
  color: @edu-text-color-secondary;
  background-color: @edu-background-color-base;
  border-radius: 50%;
}

